# conan-ws

./: .gitignore  ReadMe.md
doc/: ReadMe.md  artifactory_conan_offline_guide.md  artifactory_docker_kurulum.md  artifactory_docker_kurulum_offline.md  conan-notes.md  videos.md
example-profiles/: linux-clang-debug  linux-clang-release  linux-gcc-debug  linux-gcc-release  vxworks-clang-debug  vxworks-clang-release  windows-msvc-debug  windows-msvc-release
example_01/: ReadMe.md
example_01 pyfile/: ReadMe.md  conanfile.py
example_01_pyfile/: _conanfile.txt
example_01_pyfile/src/: main.c
example_02_cpp/: CMakeLists.txt  conanfile.txt  test.ps1  test.sh
example_02_cpp/src/: main.cpp
gtest-package/: ReadMe.md  conanfile.py
gtest-package/gtest_package_test/: CMakeLists.txt  ReadMe.md  build_debug.bat  build_release.bat
gtest-package/gtest_package_test/src/: main.cpp
